spacing fixed

--- a/page.css
+++ b/page.css
@@ -33,32 +33,42 @@ a, a span {
 }
 
 ul, ol {
-  padding-left: 25px;
-}
-
-header {
-  padding: 40px;
-}
-
-header h1 {
-  color: #333;
-  text-transform: uppercase;
-  font-size: 50px;
-  letter-spacing: 10px;
-  margin: 0 0 0 4px;
-}
-
-header ul {
-  margin: 25px 0 0;
+  margin: 0 0 0 0;
+  padding-left: 0px;
   list-style:none;
 }
-.list-inline>li{display:inline-block;padding-right:10px}
+.navbar{
+    margin: 20px 0 20px 0;
+}
+.navbar>li{display:inline-block;padding-right:10px}
 
-header ul li {
-  font-weight: 700;
+ul li {
+    font-weight: 700;
 }
 .current{
     color: #268bd2
+}
+
+header {
+  padding-left: 40px;
+  padding-top: 40px;
+  margin: 0 0 0 0;
+}
+
+h1 {
+    color: #333;
+    text-transform: uppercase;
+    font-size: 50px;
+    letter-spacing: 10px;
+    margin: 0 0 0 0px;
+}
+
+h2 {
+    color: #333;
+    text-transform: uppercase;
+    font-size: 20px;
+    letter-spacing: 5px;
+    margin: 0 0 20px 0;
 }
 
 p {
@@ -66,6 +76,7 @@ p {
 }
 
 div.body {
+    margin: 0 0 0 0;
     padding-left: 65px
 }
 
